# portfolio

./: .dockerignore  .env.ops.example  .gitignore  CMakeLists.txt  DOCUMENT_FORMAT_PLAN.md  Dockerfile  README.md  _pdf-defaults.yml  _quarto.yml  html2pdf.py  pyproject.toml  이전포폴.txt  자기소개서.md  자기소개서_다듬은버전.md  자기소개서_서버지원_버전.md  자기소개서_클라이언트지원_버전.md  저는 학부 졸업 작품을 웹 서버 개발로 시작하면서 백엔드 및 서버 개발의 관심을 가지게 되었습니1.docx
01_ServerCore_v4/: ServerCorePortfolio.html  ServerCorePortfolio.qmd  ServerCorePortfolio.qmd.bak
02_SwarmDominion_DX11/: SwarmDominion_DX11_Architecture.md  SwarmDominion_DX11_Graphics.md
03_FactionClash_Client/: CMakeLists.txt  ClientPortfolio.html  ClientPortfolio.qmd  ClientPortfolio.qmd.bak
03_FactionClash_Client/proto/: battle.proto
03_FactionClash_Client/src/: battle.pb.cc  battle.pb.h  boids.h  bot.cpp  bot.h  bot_manager.cpp  bot_manager.h  camera.cpp  camera.h  dx12_renderer.cpp  dx12_renderer.h  main.cpp  network.cpp  network.h  particle_system.cpp  particle_system.h  spatial_hash.h  terrain.cpp  terrain.h  unit_renderer.cpp  unit_renderer.h
ansible/: README.md  bootstrap-kubespray.sh
dashboard/: DevOpsPortfolio.html  OpsDashboard.html  extracted.html  generate.cjs  index.html  package-lock.json  package.json  vite.config.js
deploy/: cloudflared-bongo-test.service  nfs-pv-backup-cronjob.yaml  portfolio-ops-api.service  prometheus-ingress.yaml
docs/: index.html  index.qmd  ops-hardening-roadmap.md  portfolio.css  unused.html
ops_api/: main.py
scripts/: build-pages-site.sh  configure-proxmox-auth.sh  render-devops.sh  render-docs.sh  (+1 more)
(+118 files in other folders)
